@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>346</width>
-    <height>135</height>
+    <height>144</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -54,7 +54,10 @@
             <string>&amp;OK</string>
            </property>
            <property name="autoDefault">
-            <bool>false</bool>
+            <bool>true</bool>
+           </property>
+           <property name="default">
+            <bool>true</bool>
            </property>
           </widget>
          </item>
