@@ -1,3 +1,7 @@
+-Make it easier to change active card sets using keyboard only
+ (cntr-D, arrow keys, enter).
+-Question and answer fields in the review widget can now be scrolled
+ using PageUp and PageDown.
 -Grade buttons can now be used as a shortcut for 'show answer'
  (requsted by Roel De Conick)
 -Yet more sound system stability fixes under Windows.
